gobmkida/c3/store_persistent_reading_cache
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_reading_cache/src/engine/persistent.c:908:80: error: use of undeclared identifier 'reading_cache'
memcpy( &persistent_reading_cache[v11], &persistent_reading_cache[99], sizeof( reading_cache)); 
                                                                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_reading_cache/src/engine/persistent.c:963:7: error: use of undeclared identifier 'byte_9C688C'
v27 = byte_9C688C[i]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_reading_cache/src/engine/persistent.c:969:4: error: use of undeclared identifier 'byte_9C688D'
|| byte_9C688D[i] != 3 && v42[i + 21] == 1) ) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_reading_cache/src/engine/persistent.c:980:26: error: use of undeclared identifier 'byte_9C689F'
if ( ( unsigned __int8)( byte_9C689F[v28] - 1) <= 1u && *j ) 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_reading_cache/src/engine/persistent.c:993:26: error: use of undeclared identifier 'byte_9C688C'
if ( ( unsigned __int8)( byte_9C688C[k] - 1) >= 2u 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_reading_cache/src/engine/persistent.c:998:5: error: use of undeclared identifier 'byte_9C688D'
|| !byte_9C688D[k] && v42[k + 21] == 2) ) 
    ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_reading_cache/src/engine/persistent.c:1005:6: error: use of undeclared identifier 'byte_9C688C'
if ( byte_9C688C[m] != 3 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_reading_cache/src/engine/persistent.c:1010:4: error: use of undeclared identifier 'byte_9C688D'
|| byte_9C688D[m] != 3 && ( unsigned __int8)( v42[m + 21] - 1) <= 2u) ) 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_reading_cache/src/obj/1/persistent.o] Error 1
